# jinglenodes

./: Erlang_Jingle_Nodes_Service.md  FunctionalSpecServicesAPI.md  JingleNodesFullDescription.md  PageName.md  ProjectHome.md  start.sh
ejabberd_mod_jinglenodes/etc/: ejabberd.cfg
ejabberd_mod_jinglenodes/src/: Makefile.am
extension/: xep-0777.html  xep-0777.xml
jnsapi/src/: first.cpp
jnsapi_erlang/: Makefile  jn_component.cfg  jn_component.erl  start.sh  stop.sh
jnsapi_erlang/ebin/: jn_component.beam  udp_relay.beam
jnsapi_erlang/include/: jn_component.hrl
jnsapi_erlang/src/: app_jn_component.app  app_jn_component.erl  jingle_handler.erl  jingle_relay.erl  jn_component.erl  sup_jn_component.erl  udp_relay.erl
jnsapi_java/: pom.xml
jnsapi_java/src/test/java/: EventDatagramTest.java  TestSocket.java
spark_jingle/: plugin.xml
tags/jnsapi_erlang_0.0.1/: jn_component.erl
tags/jnsapi_erlang_0.0.1/src/: jn_component.erl
tags/jnsapi_erlang_0.2/src/: udp_relay.erl
trunk/ejabberd_mod_jinglenodes/: Makefile.am  autogen.sh  configure.ac
trunk/ejabberd_mod_jinglenodes/src/: mod_jinglenodes.erl  udp_relay.erl
trunk/extension/: xep-0777.html  xep.ent
trunk/jnsapi_erlang/: Makefile  jn_component.cfg  jn_component.erl  start.sh  stats.sh  stop.sh  udp_relay.erl
trunk/jnsapi_erlang/ebin/: udp_relay.beam
trunk/jnsapi_erlang/src/: app_jn_component.erl  jingle_handler.erl  jingle_relay.erl  jn_component.erl  p1_loglevel.erl  sup_jn_component.erl  udp_relay.erl  unit_test.erl
trunk/jnsapi_java/: pom.xml
trunk/jnsapi_java/src/test/java/: EventDatagramTest.java
wiki/: Erlang_Jingle_Nodes_Service.wiki  FunctionalSpecServicesAPI.wiki  JingleNodesFullDescription.wiki  PageName.wiki
(+68 files in other folders)
